--- a/package.json
+++ b/package.json
@@ -3,12 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "falling-particles": "^1.0.4",
+    "framer-motion": "^11.2.10",
     "react": "^18.3.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-snowfall": "^2.1.0",
+    "react-snowstorm": "^0.0.3",
+    "react-typical": "^0.1.3",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5"
   }
 }
